k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phone-manager-api
  labels:
    app: phone-manager-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: phone-manager-api
